objects/SFDC_Request__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Needed__c</fullName>
        <inlineHelpText>Required for Report Requests</inlineHelpText>
        <label>Date Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 30 minutes</fullName>
                </value>
                <value>
                    <fullName>30 minutes</fullName>
                </value>
                <value>
                    <fullName>1 hour</fullName>
                </value>
                <value>
                    <fullName>1-2 hours</fullName>
                </value>
                <value>
                    <fullName>2-3 hours</fullName>
                </value>
                <value>
                    <fullName>3+ hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Example_Link__c</fullName>
        <label>Example Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Management_Notes__c</fullName>
        <label>Management Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>My_Requests__c</fullName>
        <formula>IF( $User.Id =  SFDC_Guru__r.Id, TRUE, FALSE)</formula>
        <label>My Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <label>Related Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Screening Interviews</fullName>
                </value>
                <value>
                    <fullName>HR/Onboarding Improvements</fullName>
                </value>
                <value>
                    <fullName>Billing Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Reason__c</fullName>
        <label>Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ActionGrid</fullName>
                </value>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Business Impacting</fullName>
                </value>
                <value>
                    <fullName>Calendar Sync</fullName>
                </value>
                <value>
                    <fullName>Email Blast</fullName>
                </value>
                <value>
                    <fullName>Functionality Question/Problem</fullName>
                </value>
                <value>
                    <fullName>Groove</fullName>
                </value>
                <value>
                    <fullName>Groove - Email Sync</fullName>
                </value>
                <value>
                    <fullName>Idea/Innovation</fullName>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
                <value>
                    <fullName>Marketing/Website</fullName>
                </value>
                <value>
                    <fullName>New Field(s)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Picklist option add/remove</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Report/Dashboard Request/Update</fullName>
                </value>
                <value>
                    <fullName>Sertifi Help</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Guru__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Guru</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>More Info Needed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Waiting on Feedback</fullName>
                </value>
                <value>
                    <fullName>In Testing</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Waiting on Management&apos;s Feedback</fullName>
                </value>
                <value>
                    <fullName>Closed- Captured For Future Discussions</fullName>
                </value>
                <value>
                    <fullName>Closed- Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed- Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed- Trained</fullName>
                </value>
                <value>
                    <fullName>Closed - Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SFDC Request</label>
    <nameField>
        <displayFormat>SFDC{000000}</displayFormat>
        <label>SFDC Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Needed_Not_Today_or_Tomorrow</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Request_Reason__c, &quot;Report/Dashboard Request/Update&quot;) &amp;&amp;
 ISPICKVAL( Status__c , &quot;New&quot;) &amp;&amp;
 OR(Date_Needed__c = TODAY(),Date_Needed__c =  TODAY() + 1)</errorConditionFormula>
        <errorDisplayField>Date_Needed__c</errorDisplayField>
        <errorMessage>Report Requests require more than 2 days notice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Needed_for_Report_Requests</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Date_Needed__c) &amp;&amp;
 ISPICKVAL(Request_Reason__c, &quot;Report/Dashboard Request/Update&quot;)&amp;&amp;
 NOT(ISPICKVAL( Priority__c , &quot;Low&quot;))</errorConditionFormula>
        <errorDisplayField>Date_Needed__c</errorDisplayField>
        <errorMessage>Medium/High Priority Report Requests require Date Needed to be filled out</errorMessage>
    </validationRules>
</CustomObject>